tests/snapshots/volcano/q14.snap
---
source: tests/explain_snapshots.rs
description: "-- star around lineitem with two dimension filters\nSELECT l_orderkey, l_linenumber\nFROM lineitem, part, orders\nWHERE l_partkey = p_partkey\n  AND l_orderkey = o_orderkey\n  AND p_brand = 'Brand#44'\n  AND o_orderstatus = 'O'"
expression: rendered
---
ProjectPhys [#0.0, #0.2]
  HashJoinPhys on=[#0.0 = #2.0] (build, probe)
    HashJoinPhys on=[#0.1 = #1.0] (build, probe)
      FilterPhys (#1.2 = 'Brand#44')
        ProjectPhys [#1.0, #1.2]
          ScanPhys #1
      ProjectPhys [#0.0, #0.1, #0.2]
        ScanPhys #0
    FilterPhys (#2.2 = 'O')
      ProjectPhys [#2.0, #2.2]
        ScanPhys #2
