tests/snapshots/volcano/q15.snap
---
source: tests/explain_snapshots.rs
description: "-- 4-way; the highly selective filter (one customer) is textually last\nSELECT o_orderkey, o_totalprice, p_retailprice\nFROM orders, lineitem, part, customer\nWHERE o_orderkey = l_orderkey\n  AND l_partkey = p_partkey\n  AND o_custkey = c_custkey\n  AND c_custkey = 77"
expression: rendered
---
ProjectPhys [#0.0, #0.3, #2.4]
  HashJoinPhys on=[#1.1 = #2.0] (build, probe)
    HashJoinPhys on=[#0.0 = #1.0] (build, probe)
      HashJoinPhys on=[#0.1 = #3.0] (build, probe)
        FilterPhys (#3.0 = 77)
          ProjectPhys [#3.0]
            ScanPhys #3
        ProjectPhys [#0.0, #0.1, #0.3]
          ScanPhys #0
      ProjectPhys [#1.0, #1.1]
        ScanPhys #1
    ProjectPhys [#2.0, #2.4]
      ScanPhys #2
