tests/snapshots/volcano/q16.snap
---
source: tests/explain_snapshots.rs
description: "-- explicit JOIN chain written largest-first: fine at P0 (hash joins),\n-- but the ORDER of those hash joins is still textual until P2\nSELECT c_name, l_extendedprice\nFROM lineitem\nINNER JOIN orders ON l_orderkey = o_orderkey\nINNER JOIN customer ON o_custkey = c_custkey\nWHERE c_mktsegment = 'AUTOMOBILE' AND l_discount > 0.05"
expression: rendered
---
ProjectPhys [#2.1, #0.4]
  HashJoinPhys on=[#0.0 = #1.0] (build, probe)
    HashJoinPhys on=[#1.1 = #2.0] (build, probe)
      FilterPhys (#2.3 = 'AUTOMOBILE')
        ProjectPhys [#2.0, #2.1, #2.3]
          ScanPhys #2
      ProjectPhys [#1.0, #1.1]
        ScanPhys #1
    FilterPhys (#0.5 > 0.05)
      ProjectPhys [#0.0, #0.4, #0.5]
        ScanPhys #0
