tests/snapshots/volcano/q17.snap
---
source: tests/explain_snapshots.rs
description: "-- 4-way star, comma-spelled, filters on two different dimensions\nSELECT c_name, p_name, l_quantity\nFROM part, orders, customer, lineitem\nWHERE l_partkey = p_partkey\n  AND l_orderkey = o_orderkey\n  AND o_custkey = c_custkey\n  AND p_size < 10\n  AND c_mktsegment = 'FURNITURE'"
expression: rendered
---
ProjectPhys [#2.1, #0.1, #3.3]
  HashJoinPhys on=[#0.0 = #3.1] (build, probe)
    FilterPhys (#0.3 < 10)
      ProjectPhys [#0.0, #0.1, #0.3]
        ScanPhys #0
    HashJoinPhys on=[#1.0 = #3.0] (build, probe)
      HashJoinPhys on=[#1.1 = #2.0] (build, probe)
        FilterPhys (#2.3 = 'FURNITURE')
          ProjectPhys [#2.0, #2.1, #2.3]
            ScanPhys #2
        ProjectPhys [#1.0, #1.1]
          ScanPhys #1
      ProjectPhys [#3.0, #3.1, #3.3]
        ScanPhys #3
