tests/snapshots/volcano/q19.snap
---
source: tests/explain_snapshots.rs
description: "-- ORDER BY + LIMIT, single table (tiebreaker c_custkey keeps it total)\nSELECT c_custkey, c_name, c_acctbal\nFROM customer\nWHERE c_mktsegment = 'HOUSEHOLD'\nORDER BY c_acctbal DESC, c_custkey\nLIMIT 10"
expression: rendered
---
ProjectPhys [#0.0, #0.1, #0.4]
  LimitPhys 10
    SortPhys [#0.4 DESC, #0.0 ASC]
      FilterPhys (#0.3 = 'HOUSEHOLD')
        ProjectPhys [#0.0, #0.1, #0.3, #0.4]
          ScanPhys #0
