tests/snapshots/volcano/q24.snap
---
source: tests/explain_snapshots.rs
description: "-- disconnected join graph: a true cross product (tiny after filters).\n-- P2's DP must refuse cross products and fall back to greedy.\nSELECT c_name, p_name\nFROM customer, part\nWHERE c_custkey = 5 AND p_size = 33\nORDER BY c_name, p_name\nLIMIT 20"
expression: rendered
---
ProjectPhys [#0.1, #1.1]
  LimitPhys 20
    SortPhys [#0.1 ASC, #1.1 ASC]
      NestedLoopPhys on=[]
        FilterPhys (#0.0 = 5)
          ProjectPhys [#0.0, #0.1]
            ScanPhys #0
        FilterPhys (#1.3 = 33)
          ProjectPhys [#1.1, #1.3]
            ScanPhys #1
